src/test/ui/issues/issue-43424.stderr
error: unexpected generic arguments in path
  --> $DIR/issue-43424.rs:10:4
   |
LL | m!(inline<u8>);
   |    ^^^^^^^^^^

error: aborting due to previous error

